@@ -1,3 +1,7 @@
+2021-07-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/spdlog/*: spdlog 1.9.1
+
 2021-07-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Version 0.0.6
